--- a/Draw/ZhaJinHua/Controller/ZJHRoomListCell~ipad.xib
+++ b/Draw/ZhaJinHua/Controller/ZJHRoomListCell~ipad.xib
@@ -43,9 +43,10 @@
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="978668417">
 								<reference key="NSNextResponder" ref="956424433"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{50, 0}, {265, 101}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{120, 0}, {636, 244}}</string>
 								<reference key="NSSuperview" ref="956424433"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="780803708"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -53,9 +54,10 @@
 							</object>
 							<object class="IBUIImageView" id="979450192">
 								<reference key="NSNextResponder" ref="956424433"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{68, 37}, {237, 1}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{163, 89}, {568, 2}}</string>
 								<reference key="NSSuperview" ref="956424433"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="83313951"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -67,9 +69,10 @@
 							</object>
 							<object class="IBUILabel" id="780803708">
 								<reference key="NSNextResponder" ref="956424433"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{74, 8}, {229, 25}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{177, 19}, {549, 60}}</string>
 								<reference key="NSSuperview" ref="956424433"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="979450192"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -91,19 +94,20 @@
 								<float key="IBUIMinimumFontSize">10</float>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
-									<double key="pointSize">17</double>
+									<double key="pointSize">34</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica</string>
-									<double key="NSSize">17</double>
+									<double key="NSSize">34</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 							<object class="IBUIView" id="298098795">
 								<reference key="NSNextResponder" ref="956424433"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{7, 8}, {42, 44}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{16, 22}, {100, 100}}</string>
 								<reference key="NSSuperview" ref="956424433"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="978668417"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -118,9 +122,10 @@
 							</object>
 							<object class="IBUIView" id="83313951">
 								<reference key="NSNextResponder" ref="956424433"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{71, 46}, {42, 44}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{170, 114}, {100, 100}}</string>
 								<reference key="NSSuperview" ref="956424433"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="108793412"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -133,9 +138,10 @@
 							</object>
 							<object class="IBUIView" id="108793412">
 								<reference key="NSNextResponder" ref="956424433"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{134, 46}, {42, 44}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{321, 114}, {100, 100}}</string>
 								<reference key="NSSuperview" ref="956424433"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="562000748"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -148,9 +154,10 @@
 							</object>
 							<object class="IBUIView" id="562000748">
 								<reference key="NSNextResponder" ref="956424433"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{195, 46}, {42, 44}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{468, 114}, {100, 100}}</string>
 								<reference key="NSSuperview" ref="956424433"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="715107468"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -163,9 +170,11 @@
 							</object>
 							<object class="IBUIView" id="715107468">
 								<reference key="NSNextResponder" ref="956424433"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{258, 46}, {42, 44}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{619, 114}, {100, 100}}</string>
 								<reference key="NSSuperview" ref="956424433"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -176,8 +185,9 @@
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</array>
-						<string key="NSFrameSize">{320, 101}</string>
+						<string key="NSFrameSize">{768, 244}</string>
 						<reference key="NSSuperview" ref="81896483"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="298098795"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -191,8 +201,9 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 102}</string>
+				<string key="NSFrameSize">{768, 245}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="956424433"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -321,7 +332,56 @@
 			<nil key="sourceID"/>
 			<int key="maxID">19</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonRoomListCell</string>
+					<string key="superclassName">PPTableViewCell</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonRoomListCell.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">DiceAvatarView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/DiceAvatarView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">PPTableViewCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PPTableViewCell.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ZJHRoomListCell</string>
+					<string key="superclassName">CommonRoomListCell</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="backgroundImageView">UIImageView</string>
+						<string key="roomNameLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="backgroundImageView">
+							<string key="name">backgroundImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="roomNameLabel">
+							<string key="name">roomNameLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ZJHRoomListCell.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
